--- a/src/css/Game.scss
+++ b/src/css/Game.scss
@@ -229,7 +229,7 @@ button.bgabutton > * {
 }
 
 .score-sheet {
-  background-image: url(img/starbg.jpg);
+  background-color: black;
   background-size: cover;
   font-family: var(--accent-game-font);
   font-size: large;
