--- a/src/css/Tokens.scss
+++ b/src/css/Tokens.scss
@@ -89,18 +89,31 @@
   // }
 }
 
+.dice {
+  height: 32px;
+  border-radius: 20%;
+  aspect-ratio: 1 / 1;
+  position: relative;
+  background-image: unset;
+  background-color: unset;
+  isolation: isolate;
+}
+
 .dice::before {
   content: " ";
+  z-index: -1;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background-image: url(img/dice.png);
+  background-image: url(img/dice.webp);
   // border-radius: 10%;
   background-size: 400% auto;
   background-position-y: 100%;
   background-position-x: 100%;
+  outline: 1px solid white;
+  border-radius: 20%;
 }
 .wicon.dice {
   background-image: unset;
@@ -129,14 +142,6 @@ $i: 0;
   .wicon_die_#{$i}::before {
     background-position-y: calc($x * 20%);
   }
-}
-.dice {
-  height: 32px;
-  border-radius: 20%;
-  aspect-ratio: 1 / 1;
-  position: relative;
-  background-image: unset;
-  background-color: unset;
 }
 
 .influence {
@@ -178,7 +183,7 @@ $i: 0;
     background-position-x: 84.6%;
   }
   &.color_6cd0f6 {
-    background-position-x: 77%;
+    background-position-x: 76%;
   }
   &.color_ffcc02 {
     background-position-x: 100%;
