--- a/wayfarers.css
+++ b/wayfarers.css
@@ -1190,12 +1190,12 @@ html[data-theme=dark] .deck .counter {
   position: relative;
   flex-wrap: wrap;
   justify-content: space-around;
+  align-items: flex-start;
+  gap: 20px;
 }
 
 #ebd-body[data-board-layout=scale] #players_panels {
   overflow: visible;
-  justify-content: center;
-  align-items: center;
 }
 
 .pboard {
@@ -1243,7 +1243,7 @@ html[data-theme=dark] .deck .counter {
   pointer-events: auto;
   display: inline-block;
   vertical-align: top;
-  margin-right: 3px;
+  margin-right: 5px;
 }
 
 .infsupply {
@@ -1603,6 +1603,7 @@ html[data-theme=dark] .deck .counter {
 #supply > * {
   display: inline-block;
   vertical-align: top;
+  margin-right: 5px;
 }
 
 .jpos {
@@ -1807,17 +1808,30 @@ html[data-theme=dark] .miniboard .guild_count {
   line-height: 24px;
 }
 
+.dice {
+  height: 32px;
+  border-radius: 20%;
+  aspect-ratio: 1/1;
+  position: relative;
+  background-image: unset;
+  background-color: unset;
+  isolation: isolate;
+}
+
 .dice::before {
   content: " ";
+  z-index: -1;
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  background-image: url(img/dice.png);
+  background-image: url(img/dice.webp);
   background-size: 400% auto;
   background-position-y: 100%;
   background-position-x: 100%;
+  outline: 1px solid white;
+  border-radius: 20%;
 }
 
 .wicon.dice {
@@ -1908,15 +1922,6 @@ html[data-theme=dark] .miniboard .guild_count {
   background-position-y: 100%;
 }
 
-.dice {
-  height: 32px;
-  border-radius: 20%;
-  aspect-ratio: 1/1;
-  position: relative;
-  background-image: unset;
-  background-color: unset;
-}
-
 .influence {
   background-image: url(img/tokens.png);
   background-size: auto 1400%;
@@ -1967,7 +1972,7 @@ html[data-theme=dark] .miniboard .guild_count {
 .marker.color_6cd0f6,
 .tracker_comet.color_6cd0f6,
 .tracker_res.color_6cd0f6 {
-  background-position-x: 77%;
+  background-position-x: 76%;
 }
 .marker.color_ffcc02,
 .tracker_comet.color_ffcc02,
@@ -3037,7 +3042,7 @@ button.bgabutton > * {
 }
 
 .score-sheet {
-  background-image: url(img/starbg.jpg);
+  background-color: black;
   background-size: cover;
   font-family: var(--accent-game-font);
   font-size: large;
